blocks/modal.css
.modal {
  visibility: hidden;
  opacity: 0;
  background-color: #00000080;
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 15px;
  transition:
    visibility 0s linear 0.3s,
    opacity 0.3s ease;
}

.modal_is-opened {
  visibility: visible;
  opacity: 1;
  transition-delay: 0s;
}

.modal__container {
  max-width: 730px;
  width: 100%;
  border-radius: 8px;
  background-color: #ffff;
  padding: 32px 50px;
  position: relative;
}

.modal__close-btn {
  position: absolute;
  top: 32px;
  right: 50px;
  width: 40px;
  height: 40px;
  padding: 0;
  border: none;
  background: none;
  cursor: pointer;
  display: flex;
  align-items: center;
  justify-content: center;
}

.modal__close-btn img {
  width: 100%;
  height: 100%;
  object-fit: contain;
}

.modal__title {
  margin: 0 0 32px;
  font-size: 36px;
  font-weight: 500;
  line-height: 1.2;
}

.modal__form {
  display: flex;
  flex-direction: column;
}

.modal__label {
  margin: 0 0 32px;
  color: #2121218d;
  font-size: 16px;
}

.modal__input {
  display: block;
  margin: 8px 0 0;
  width: 100%;
  min-height: 52px;
  border-radius: 8px;
  border: 1px solid #2121214d;
  font-size: 16px;
}

.modal__input::placeholder {
  color: #2121214d;
  font-size: 20px;
}

.modal__submit-btn {
  display: flex;
  align-items: center;
  justify-content: center;
  align-self: flex-start;
  gap: 8px;
  max-width: 156px;
  height: 52px;
  padding: 0 24px;
  border: none;
  border-radius: 8px;
  background-color: #212121;
  color: #fcf5e5;
  font-family: inherit;
  font-size: 16px;
  font-weight: 500;
  line-height: 1;
  cursor: pointer;
  flex-shrink: 0;
  transition: opacity 0.3s;
}

